force-app/main/default/objects/Case/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <formula>TEXT( Account.Country__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Country</label>
    <type>Text</type>
</CustomField>