force-app/main/default/objects/Case/fields/Account_Delivery_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Account_Delivery_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Delivery Ticket</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Delivery Tickets</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>