force-app/main/default/objects/Case/fields/Account_Is_Additional__c.field-meta.xml
<CustomField>
    <fullName>Account_Is_Additional__c</fullName>
    <description>Used for process flow criteria</description>
    <formula>IF(ISPICKVAL(Account.Account_Type__c,&#39;Additional ECN&#39;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Is Additional</label>
    <type>Checkbox</type>
</CustomField>