force-app/main/default/objects/Case/fields/Account_Owner_List_View_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_List_View_Identifier__c</fullName>
    <formula>IF( Account_Owner__c = $User.Id, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner List View Identifier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>