force-app/main/default/objects/Case/fields/Account_Service_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Service_Segment__c</fullName>
    <formula>TEXT(Account.Service_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Service Segment</label>
    <type>Text</type>
</CustomField>