force-app/main/default/objects/Case/fields/Account_Support_Region_Local_Time_Closed__c.field-meta.xml
<CustomField>
    <fullName>Account_Support_Region_Local_Time_Closed__c</fullName>
    <description>Time based on account&#39;s region/closest office timezone</description>
    <formula>IF ( BusinessHours.Name &lt;&gt; &#39;London&#39;, IF ( BusinessHours.Name &lt;&gt; &#39;San Fransisco&#39;, TEXT( ClosedDate + 10/24), TEXT( ClosedDate - 8/24 )) ,  TEXT( ClosedDate + 1/24) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time based on account&#39;s region/closest office timezone</inlineHelpText>
    <label>Account Support Region Local Time Closed</label>
    <type>Text</type>
</CustomField>