force-app/main/default/objects/Case/fields/AccountECN__c.field-meta.xml
<CustomField>
    <fullName>AccountECN__c</fullName>
    <formula>Account.ECN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ECN</label>
    <type>Text</type>
</CustomField>