force-app/main/default/objects/Case/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>Account.Active__c</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>