force-app/main/default/objects/Case/fields/Actual_Development_Completed__c.field-meta.xml
<CustomField>
    <fullName>Actual_Development_Completed__c</fullName>
    <inlineHelpText>Enter the date when the Actual development was completed.</inlineHelpText>
    <label>Actual Development Completed</label>
    <type>Date</type>
</CustomField>