force-app/main/default/objects/Case/fields/Actual_Live_Testing_Completed__c.field-meta.xml
<CustomField>
    <fullName>Actual_Live_Testing_Completed__c</fullName>
    <inlineHelpText>Enter the Actual live testing completed date.</inlineHelpText>
    <label>Actual Live Testing Completed</label>
    <type>Date</type>
</CustomField>