force-app/main/default/objects/Case/fields/Actual_Planning_and_Prep_Completed__c.field-meta.xml
<CustomField>
    <fullName>Actual_Planning_and_Prep_Completed__c</fullName>
    <inlineHelpText>Enter the date when the Actual planning and preparation were completed.</inlineHelpText>
    <label>Actual Planning and Prep Completed</label>
    <type>Date</type>
</CustomField>