force-app/main/default/objects/Case/fields/Actual_Production_Cut_Over_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Production_Cut_Over_Date__c</fullName>
    <inlineHelpText>Enter the Actual production cut over date.</inlineHelpText>
    <label>Actual Production Cut Over Date</label>
    <type>Date</type>
</CustomField>