force-app/main/default/objects/Case/fields/Actual_UAT_Completed__c.field-meta.xml
<CustomField>
    <fullName>Actual_UAT_Completed__c</fullName>
    <inlineHelpText>Enter the date when the Actual UAT testing was completed.</inlineHelpText>
    <label>Actual UAT Completed</label>
    <type>Date</type>
</CustomField>