force-app/main/default/objects/Case/fields/All_Milestone_Projected_Values_Entered__c.field-meta.xml
<CustomField>
    <fullName>All_Milestone_Projected_Values_Entered__c</fullName>
    <formula>If (Percentage_of_Projected_Date_Fields_Set__c =1, True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>All Projected Date fields must be filled in, in the Milestones section, before continuing to the next phase.  Once all fields have been completed, this checkbox will be automatically checked.</inlineHelpText>
    <label>All Milestone Projected Values Entered</label>
    <type>Checkbox</type>
</CustomField>