force-app/main/default/objects/Case/fields/API_Delivery_Category__c.field-meta.xml
<CustomField>
    <fullName>API_Delivery_Category__c</fullName>
    <label>API Delivery Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>API - API Integration Remote</fullName>
                <default>true</default>
                <label>API - API Integration Remote</label>
            </value>
            <value>
                <fullName>API - Complex Large Business Onsite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>