force-app/main/default/objects/Case/fields/API_Welcome_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>API_Welcome_Email_Sent__c</fullName>
    <inlineHelpText>Enter the date when the Welcome email and all associated attachments were manually sent to the client.</inlineHelpText>
    <label>API Welcome Email Sent</label>
    <type>Date</type>
</CustomField>