force-app/main/default/objects/Case/fields/April__c.field-meta.xml
<CustomField>
    <fullName>April__c</fullName>
    <formula>If(Created_Month__c =&#39;April&#39;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>