force-app/main/default/objects/Case/fields/Archive_Restore_Date__c.field-meta.xml
<CustomField>
    <fullName>Archive_Restore_Date__c</fullName>
    <label>Restore Date</label>
    <type>Date</type>
</CustomField>