force-app/main/default/objects/Case/fields/Assigned_From__c.field-meta.xml
<CustomField>
    <fullName>Assigned_From__c</fullName>
    <label>Assigned From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>