force-app/main/default/objects/Case/fields/Assignee_Queue_number__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Queue_number__c</fullName>
    <formula>IF(  Owner:User.UserRole.Name = &#39;Service Desk Level 3&#39;|| Owner:User.UserRole.Name = &#39;Service Desk Team Lead&#39; || Owner:User.UserRole.Name = &#39;Service Desk Administrator&#39; , 3, (IF (Owner:User.UserRole.Name = &#39;Service Desk Level 2&#39;,2,1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hidden Assignee Queue number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>