force-app/main/default/objects/Case/fields/Assignee_Region__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Region__c</fullName>
    <formula>TEXT( Owner:User.User_Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignee Region</label>
    <type>Text</type>
</CustomField>