force-app/main/default/objects/Case/fields/Assignee_Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Service_Level__c</fullName>
    <formula>IF (BEGINS( OwnerId, &quot;005&quot;),Owner:User.Service_Level_c__c, 
CASE( Owner:Queue.QueueName, 
&quot;Global Service Desk Level 1&quot;, &quot;Service Desk Level 1&quot;, 
&quot;Global Service Desk Level 2&quot;, &quot;Service Desk Level 2&quot;, 
&quot;Priority Service&quot;, &quot;Service Desk Level 2&quot;, 
&quot;Global Service Desk Level 3 IT&quot;, &quot;Service Desk Level 3&quot;, 
&quot;Global Svc Desk L3 - Finance&quot;, &quot;Service Desk Finance Level 3&quot;, 
&quot;Global Svc Desk L3 - Trans Monitoring&quot;, &quot;Service Desk Finance Level 3&quot;, 
&quot;Global Svc Desk L3 - Chargeback &amp; Fraud&quot;, &quot;Service Desk Finance Level 3&quot;, 
&quot;Global Svc Desk L3 - VANS Billing&quot;, &quot;Service Desk Finance Level 3&quot;, 
&quot;Global Svc Desk L3 - Banking Ops&quot;, &quot;Service Desk Finance Level 3&quot;, 
&quot;Global Service Desk Level 3 Finance&quot;, &quot;Service Desk Finance Level 3&quot;,
&quot;Global Service Desk Level 3 Delivery&quot;, &quot;Service Desk Level 3&quot;, 
&quot;Quarterly Enhancements&quot;, &quot;Service Desk Level 3&quot;,
&quot;VANs Billing Queue&quot;, &quot;Service Desk Finance Level 3&quot;, null))</formula>
    <label>Assignee Service Level</label>
    <type>Text</type>
</CustomField>