force-app/main/default/objects/Case/fields/August__c.field-meta.xml
<CustomField>
    <fullName>August__c</fullName>
    <formula>If(Created_Month__c =&#39;August&#39;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aug</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>