force-app/main/default/objects/Case/fields/Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner__c</fullName>
    <label>Case Owner Id</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>