force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Account Changes</fullName>
            </value>
            <value>
                <fullName>Activations</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Browser Issue</fullName>
            </value>
            <value>
                <fullName>Client Report</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Delivery/Implementation</fullName>
            </value>
            <value>
                <fullName>Dropped Call</fullName>
            </value>
            <value>
                <fullName>EFT Account Changes</fullName>
            </value>
            <value>
                <fullName>EFT Payment Processing</fullName>
            </value>
            <value>
                <fullName>EFT Refunds</fullName>
            </value>
            <value>
                <fullName>EFT Training Request</fullName>
            </value>
            <value>
                <fullName>ePP</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>FreeNett Payment Processing</fullName>
            </value>
            <value>
                <fullName>Gateway Payment Processing</fullName>
            </value>
            <value>
                <fullName>Gateway Payment Status</fullName>
            </value>
            <value>
                <fullName>Gateway Refund</fullName>
            </value>
            <value>
                <fullName>Gateway Reporting</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Issues</fullName>
            </value>
            <value>
                <fullName>JIRA</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>New Request</fullName>
            </value>
            <value>
                <fullName>Notification</fullName>
            </value>
            <value>
                <fullName>Offboarding</fullName>
            </value>
            <value>
                <fullName>Outage</fullName>
            </value>
            <value>
                <fullName>Password</fullName>
            </value>
            <value>
                <fullName>Payment Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>