force-app/main/default/objects/Case/fields/CC_Email_Address_10__c.field-meta.xml
<CustomField>
    <fullName>CC_Email_Address_10__c</fullName>
    <label>CC Email Address 10</label>
    <type>Email</type>
</CustomField>