force-app/main/default/objects/Case/fields/CC_Email_Address_1__c.field-meta.xml
<CustomField>
    <fullName>CC_Email_Address_1__c</fullName>
    <inlineHelpText>Enter the email address of other users that the Contact has requested to be added.  These email addresses will be included in all contact email communications.</inlineHelpText>
    <label>CC Email Address 1</label>
    <type>Email</type>
</CustomField>