force-app/main/default/objects/Case/fields/CC_Email_Address_2__c.field-meta.xml
<CustomField>
    <fullName>CC_Email_Address_2__c</fullName>
    <label>CC Email Address 2</label>
    <type>Email</type>
</CustomField>