force-app/main/default/objects/Case/fields/CC_Salesforce_User_1__c.field-meta.xml
<CustomField>
    <fullName>CC_Salesforce_User_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC Salesforce User 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>