force-app/main/default/objects/Case/fields/Chase_Up_Kick_off_Quest_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Chase_Up_Kick_off_Quest_Task_Created__c</fullName>
    <inlineHelpText>This is the date when the Task was created.  The field is automatically set.  
The Task is created when the  Scheduled Kick-off Call date is manually entered.
The due date is set to 4 days before the Scheduled Kick-off Call date.</inlineHelpText>
    <label>Chase Up Pre Kick-off Quest Task Created</label>
    <type>Date</type>
</CustomField>