force-app/main/default/objects/Case/fields/Check_Funding_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Check_Funding_Task_Created__c</fullName>
    <inlineHelpText>This is the date when the Task was created.  This field is automatically populated.</inlineHelpText>
    <label>Check Funding Task Created</label>
    <type>Date</type>
</CustomField>