force-app/main/default/objects/Case/fields/Client_is_Transacting__c.field-meta.xml
<CustomField>
    <fullName>Client_is_Transacting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client is Transacting</label>
    <type>Checkbox</type>
</CustomField>