force-app/main/default/objects/Case/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <description>This field is hidden from all page layouts</description>
    <label>Closed/Lost Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>