force-app/main/default/objects/Case/fields/Closed_Lost_Terminated_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Terminated_Reason__c</fullName>
    <label>Closed/Lost/Terminated Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Client unresponsive/Never transacted</fullName>
            </value>
            <value>
                <fullName>Client not ready</fullName>
            </value>
            <value>
                <fullName>VANs does not meet clients needs/expectations</fullName>
            </value>
            <value>
                <fullName>No pilot customer</fullName>
            </value>
            <value>
                <fullName>Client does not want to pay API fee</fullName>
            </value>
            <value>
                <fullName>Change of Delivery Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>