force-app/main/default/objects/Case/fields/Closed_Month__c.field-meta.xml
<CustomField>
    <fullName>Closed_Month__c</fullName>
    <formula>MONTH(DATEVALUE (ClosedDate))</formula>
    <label>Closed Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>