force-app/main/default/objects/Case/fields/Completed_Manually__c.field-meta.xml
<CustomField>
    <fullName>Completed_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox will be checked if the user has elected to &#39;Complete&#39; the delivery manually before the transactions have been processed.</inlineHelpText>
    <label>Completed Manually</label>
    <type>Checkbox</type>
</CustomField>