force-app/main/default/objects/Case/fields/Confirm_Funding_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Funding_Task_Created__c</fullName>
    <inlineHelpText>This is the date when the Task was created.  This field is set automatically.</inlineHelpText>
    <label>Confirm Funding Task Created</label>
    <type>Date</type>
</CustomField>