force-app/main/default/objects/Case/fields/Confirm_UAT_Testing_Checkpoint_Completed__c.field-meta.xml
<CustomField>
    <fullName>Confirm_UAT_Testing_Checkpoint_Completed__c</fullName>
    <inlineHelpText>This will be automatically filled in when the task &#39;API Delivery - Confirm Completion of UAT Testing&#39; is completed</inlineHelpText>
    <label>Confirm UAT Testing Checkpoint Completed</label>
    <type>Date</type>
</CustomField>