force-app/main/default/objects/Case/fields/Created_Month_Number__c.field-meta.xml
<CustomField>
    <fullName>Created_Month_Number__c</fullName>
    <formula>MONTH(DATEVALUE ( CreatedDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Month Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>