force-app/main/default/objects/Case/fields/csmrgp__Merged_By__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Merged_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that performed the merge.</description>
    <label>Merged By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>