force-app/main/default/objects/Case/fields/Current_Activity__c.field-meta.xml
<CustomField>
    <fullName>Current_Activity__c</fullName>
    <inlineHelpText>This is the current Activity.  This field is automatically populated.  Only those Activities that have been automatically created by the system will be reported here.</inlineHelpText>
    <label>Current Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>