force-app/main/default/objects/Case/fields/Current_Activity_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Activity_Due_Date__c</fullName>
    <label>Current Activity Due Date</label>
    <type>Date</type>
</CustomField>