force-app/main/default/objects/Case/fields/Customer_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Customer_Complaint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Complaint</label>
    <type>Checkbox</type>
</CustomField>