force-app/main/default/objects/Case/fields/Daily_cash_position_report_email__c.field-meta.xml
<CustomField>
    <fullName>Daily_cash_position_report_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daily cash position report (email)</label>
    <type>Checkbox</type>
</CustomField>