force-app/main/default/objects/Case/fields/Date_Of_Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Client_Contact__c</fullName>
    <inlineHelpText>The date contact was made with the client following the Welcome email.  This date is automatically set when the client contact task is completed</inlineHelpText>
    <label>Date Of Client Contact</label>
    <type>Date</type>
</CustomField>