force-app/main/default/objects/Case/fields/DD_Completed__c.field-meta.xml
<CustomField>
    <fullName>DD_Completed__c</fullName>
    <formula>Account.DD_Completed_Date__c</formula>
    <label>DD Completed</label>
    <type>Date</type>
</CustomField>