force-app/main/default/objects/Case/fields/DD_Completed_Checkpoint__c.field-meta.xml
<CustomField>
    <fullName>DD_Completed_Checkpoint__c</fullName>
    <label>DD Completed Checkpoint</label>
    <type>Date</type>
</CustomField>