force-app/main/default/objects/Case/fields/December__c.field-meta.xml
<CustomField>
    <fullName>December__c</fullName>
    <formula>If(Created_Month__c =&#39;December&#39;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dec</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>