force-app/main/default/objects/Case/fields/Delivery_Category__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Category__c</fullName>
    <label>Delivery Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Desktop - Low Touch Self Sufficient</fullName>
            </value>
            <value>
                <fullName>Desktop - High Touch Training / Consultation</fullName>
            </value>
            <value>
                <fullName>API - API Integration Remote</fullName>
            </value>
            <value>
                <fullName>API - Complex Large Business Onsite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>