force-app/main/default/objects/Case/fields/Delivery_Category_Benchmark_Man_Hours__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Category_Benchmark_Man_Hours__c</fullName>
    <label>Delivery Category Benchmark Man Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>