force-app/main/default/objects/Case/fields/Delivery_Completion_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Completion_Notification_Sent__c</fullName>
    <inlineHelpText>This field will be automatically updated when the task &quot;API Delivery - Complete Notification to Salesperson and Support Mailbox&quot; is completed</inlineHelpText>
    <label>Delivery Completion Notification Sent</label>
    <type>Date</type>
</CustomField>