force-app/main/default/objects/Case/fields/Delivery_Implementation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Implementation_Start_Date__c</fullName>
    <inlineHelpText>This is the date when Phase 1 of a Delivery starts</inlineHelpText>
    <label>Delivery Implementation Start Date</label>
    <type>Date</type>
</CustomField>